# anki-addon-release

./: .gitignore  AGENTS.md  Makefile  README.md  pyproject.toml
.github/workflows/: release.yml
src/anki_addon_release/: __init__.py  browser.py  cli.py  config.py  credentials.py  envfile.py  errors.py  handoff.py  manifest.py  packager.py  publish.py  publisher.py  publisher_login_addon.py  publisher_run_anki.py  publisher_seed.py
tests/: test_browser_flows.py  test_cli.py  test_config.py  test_credentials.py  test_envfile.py  test_handoff.py  test_manifest.py  test_packager.py  test_publish.py  test_publisher.py
