[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "anki-addon-release"
version = "0.1.0"
description = "Release helper for Anki add-ons."
readme = "README.md"
requires-python = ">=3.11"
dependencies = []
authors = [
  { name = "Elvis Sik" },
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Build Tools",
]

[project.urls]
Homepage = "https://github.com/elvis-sik/anki-addon-release"
Repository = "https://github.com/elvis-sik/anki-addon-release"
Issues = "https://github.com/elvis-sik/anki-addon-release/issues"

[project.optional-dependencies]
browser = [
  "playwright>=1.44",
]

[project.scripts]
anki-addon-release = "anki_addon_release.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.uv]
exclude-newer = "7 days"

[tool.uv.pip]
exclude-newer = "7 days"
